@@ -16,7 +16,6 @@ import java.io.BufferedInputStream;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.OutputStream;
-import java.io.UnsupportedEncodingException;
 import java.net.URISyntaxException;
 import java.net.URL;
 import java.net.URLConnection;
@@ -24,6 +23,7 @@ import java.net.URLDecoder;
 import java.net.UnknownServiceException;
 import java.util.logging.Level;
 import java.util.logging.Logger;
+import java.nio.charset.StandardCharsets;
 import javax.sound.sampled.AudioFormat;
 import javax.sound.sampled.AudioInputStream;
 import javax.sound.sampled.AudioSystem;
@@ -69,20 +69,11 @@ public final class CaptureURLConnection extends URLConnection {
         super(url);
 
         // Initialize the device that will be connecting to
-        try {
             String authority = url.getAuthority();
-            deviceName = URLDecoder.decode(authority, "UTF-8");
-        } catch (UnsupportedEncodingException ex) {
-            throw new UnsupportedOperationException(ex);
-        }
+        deviceName = URLDecoder.decode(authority, StandardCharsets.UTF_8);
     }
 
-    /**
-     * {@inheritDoc}
-     * <p>
-     * Closes any open line.
-     */
-    protected void finalize() throws Throwable {
+    private void dispose() {
         if (inputStream != null) {
             try {
                 inputStream.close();
@@ -107,6 +98,7 @@ public final class CaptureURLConnection extends URLConnection {
      *
      * @throws IOException if an I/O error occurs while opening the connection.
      */
+    @Override
     public synchronized void connect() throws IOException {
         if (connected) {
             return;
@@ -126,6 +118,8 @@ public final class CaptureURLConnection extends URLConnection {
         } catch (LineUnavailableException ex) {
             throw new IOException("Line is unavailable for " + audioFormat);
         }
+
+        Runtime.getRuntime().addShutdownHook(new Thread(this::dispose));
 
         // Marks this URLConnection as connected
         connected = true;
@@ -227,8 +221,8 @@ public final class CaptureURLConnection extends URLConnection {
      *
      * @throws UnknownServiceException output streams are not supported by the capture protocol.
      */
+    @Override
     public OutputStream getOutputStream() throws UnknownServiceException {
         throw new UnknownServiceException("Cannot write to a capture device");
     }
-
 }
